--- a/html_tutorials/html-forms.html
+++ b/html_tutorials/html-forms.html
@@ -78,6 +78,9 @@
             <input type="range" min="10" max="100">
         </p>
         
+        <p>
+            <input type="file" accept=".jpg">
+        </p>
     </form>
 </body>
 </html>
