--- a/css_tutorials/css-external2.html
+++ b/css_tutorials/css-external2.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="mystyle.css">
-
+    <style>
+        h1{
+            color: burlywood;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        }
+    </style>
+   
+    
 </head>
 <body>
     <h1>
@@ -29,7 +36,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis omnis, ut iste, delectus, nemo assumenda eos aliquam eaque quidem necessitatibus quisquam beatae totam officiis corporis illum. Nemo neque quos eos.
     </p>
 
-    <h1>
+    <h1 style="color: orange;">
         CSS Demo
     </h1>
     <p>
