--- a/css_tutorials/css-spacing.html
+++ b/css_tutorials/css-spacing.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
         div{
             background-color: rgb(156, 46, 123);
             font-size: 24px;
             color: white;
-            width: 200px;
-            height: 200px;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 16px;
+            padding: 24px 48px 24px 48px;
+            margin: 16px 16px 16px 16px;
         }
 
         div>img{
@@ -23,8 +24,12 @@
     </style>
 </head>
 <body>
-    <div>D1</div>
-    <div>D2</div>
+    <div>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio dolor ea ex tempora quasi earum numquam ratione, cumque nam vitae eum repudiandae at quibusdam voluptatibus ut expedita. Esse, quis tempore?
+    </div>
+    <div>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus iusto itaque repellendus nam, amet sed tenetur laboriosam perspiciatis nisi! Assumenda possimus voluptatum incidunt, eius earum ratione architecto sit quae ab!
+    </div>
     <div>
         <img src="../html_tutorials/img/grass.jpg" alt="">
     </div>
